# miami

./: Cargo.toml  README.md
examples/: chunk_read.rs  copy.rs
src/: chunk.rs  lib.rs  reader.rs  writer.rs
src/chunk/: chunk_types.rs  header.rs  parsed.rs  track.rs
src/chunk/parsed/: header.rs  track.rs
src/chunk/parsed/track/: event.rs  meta.rs  status.rs  sysex.rs
src/chunk/track/: event.rs  meta.rs  sysex.rs
test/: test.mid  test4tracks.mid  test_out.mid  test_run.mid
