[package]
name = "miami"
version = "0.1.2"
authors = ["BradenEverson <bradeneverson@gmail.com>"]
description = "Minimal dependency MIDI file format parser"
edition = "2021"
license = "MIT"
repository = "https://github.com/BradenEverson/miami"

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
thiserror = "2.0.11"
serde = { version = "1.0.217", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]

[lints.rust]
missing_docs = "warn"
nonstandard-style = "warn"
rust-2018-idioms = "warn"
rust-2021-compatibility = "warn"
rust-2024-compatibility = "warn"

[lints.rustdoc]
broken_intra_doc_links = "warn"

[lints.clippy]
missing_docs_in_private_items = "warn"
